# mypkg7727

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mypkg7727/: __init__.py
tests/: test_mypkg7727.py
