[tool.poetry]
name = "mypkg7727"
version = "0.1.1"
description = "A package for doing great things!"
authors = ["Monty Python"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
